--- a/design-challeneg.html
+++ b/design-challeneg.html
@@ -40,20 +40,25 @@
 </p>
 					</header>
 					<h3>What is the problem you're trying to solve?</h3>
-						<p>Getting people to join A Candle in the Window’s network hosting travelers and staying at host’s houses.</p>
+						<p>Organzing and helping users understand who Bob Goff is and his non-profit.</p>
 						<h3>The Design Question:</h3>
-						<p>How does A Candle in the Window website help users join the network to make faith-based connections and navigate hosting and requesting with ease?
+						<p>How can the website be more organized and display his different books, organization, and programs in a well thought out way that benefits the user?
 </p>
 						<h3>The Ultimate Impact</h3>
-						<p>The goal is to grow the network of members and the frequency of which they use A Candle in the Window.</p>
+						<p>To impact others by showing them their gorls and how to love and be loved greater.</p>
 						<h3>Possible Solutions</h3>
-						<p>Simplifing the homepage and fonts, creating hierarchy, using photography, and clarifying the call to action as well as using negative space could all help solve the problems.</p>
+						<p>Hierachy
+							 High-Quality images (othr than his face)
+						 	 Organization
+						   Simpler to Nagivate through (less complex)
+						 	 Display the different ways he is helping his community
+						 	 Make all different websites into one concise websites </p>
 						<h3>Context and Constraints</h3>
-						<p>The website must be on a subscription based networking site, global users and their needs, and not up-to-date information.</p>
+						<p>Range of different countries and people in need from needing food or help making their dream come true. Wide range of people needing help and/or guidance which is hard to follow and keep up with all the different aspects.</p>
 						<h3>The Design Question Restated</h3>
-						<p><strong>"How can the re-design of this website attract new global members and simplify the hosting/booking process?"</strong></p>
+						<p><strong>"How can the re-design of this website attract users to Bob Goff's organization and books?"</strong></p>
 						<hr>
-						<p>This excercise got me thinking on person-based design terms. By identifying the roots of the problems and desired outcome, I was able to map out how to take steps towards the solution.</p>
+						
 
 				</div>
 			</section>
