--- a/design-challeneg.html
+++ b/design-challeneg.html
@@ -47,18 +47,22 @@
 						<h3>The Ultimate Impact</h3>
 						<p>To impact others by showing them their gorls and how to love and be loved greater.</p>
 						<h3>Possible Solutions</h3>
-						<p>Hierachy
-							 High-Quality images (othr than his face)
-						 	 Organization
-						   Simpler to Nagivate through (less complex)
-						 	 Display the different ways he is helping his community
-						 	 Make all different websites into one concise websites </p>
+						<p>
+							<ul>
+								<li>Hierachy</li>
+							 	<li>High-Quality images (othr than his face)</li>
+						 		<li>Organization</li>
+						   	<li>Simpler to Nagivate through (less complex)</li>
+						 	 	<li>Display the different ways he is helping his community</li>
+						 	 	<li>Make all different websites into one concise websites</li>
+							</ul>
+						</p>
 						<h3>Context and Constraints</h3>
 						<p>Range of different countries and people in need from needing food or help making their dream come true. Wide range of people needing help and/or guidance which is hard to follow and keep up with all the different aspects.</p>
 						<h3>The Design Question Restated</h3>
 						<p><strong>"How can the re-design of this website attract users to Bob Goff's organization and books?"</strong></p>
 						<hr>
-						
+
 
 				</div>
 			</section>
