--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>This is an awesome process site template.</h1>
+					<h1>Love Does.</h1>
 					<ul class="actions">
 						<li><a href="#one" class="button alt scrolly big">Continue</a></li>
 					</ul>
@@ -49,9 +49,9 @@
 					<div class="inner">
 						<header>
 							<h2><a href="generic.html">Design Challenge</a></h2>
-							<p class="info">Integer porta massa sapien</p>
-						</header>
-						<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+
+					</header>
+						<p>Laying out the design challenge was the first step to truly getting to know my client Bob Goff. I accessed the IDEO Human Centered Design Toolkit to help guide me throught the design challenge process.</p>
 						<ul class="actions">
 							<li><a href="generic-page.html" class="button alt">Read More</a></li>
 						</ul>
@@ -72,9 +72,9 @@
 					<div class="inner">
 						<header>
 							<h2><a href="generic.html">Research</a></h2>
-							<p class="info">Integer porta massa sapien</p>
+
 						</header>
-						<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+						<p>I started conducting primary research on my client Bob Goff, and then secondry research other organization similar to Bob Goff's plan.</p>
 						<ul class="actions">
 							<li><a href="generic-page.html" class="button alt">Read More</a></li>
 						</ul>
@@ -95,7 +95,7 @@
 					<div class="inner">
 						<header>
 							<h2><a href="generic.html">Audience &amp; Goals</a></h2>
-							<p class="info">Integer porta massa sapien</p>
+
 						</header>
 						<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
 						<ul class="actions">
@@ -118,7 +118,7 @@
 					<div class="inner">
 						<header>
 							<h2><a href="generic.html">Solution</a></h2>
-							<p class="info">Integer porta massa sapien</p>
+
 						</header>
 						<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
 						<ul class="actions">
@@ -135,7 +135,7 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<div class="copyright">
-				&copy;2018 Your Name
+				&copy;2018 Emma Marks
 			</div>
 		</footer>
 
