--- a/design-challeneg.html
+++ b/design-challeneg.html
@@ -36,7 +36,7 @@
 					</div> -->
 					<header>
 						<h1>Design Challenge</h1>
-						<p>Defining the Design Challenge was the first step. I used the IDEO Human Centered Design Toolkit as a guide to posing questions to find the root problems of the website for users.
+						<p>Laying out the design challenge was the first step to truly getting to know my client Bob Goff. I accessed the IDEO Human Centered Design Toolkit to help guide me throught the design challenge process.
 </p>
 					</header>
 					<h3>What is the problem you're trying to solve?</h3>
