--- a/design-challeneg.html
+++ b/design-challeneg.html
@@ -31,9 +31,7 @@
 		<!-- Main -->
 			<section id="main">
 				<div class="inner">
-					<!-- <div class="image fit">
-						<img src="images/GCHC-1.jpg" alt="" />
-					</div> -->
+				</div>
 					<header>
 						<h1>Design Challenge</h1>
 						<p>Laying out the design challenge was the first step to truly getting to know my client Bob Goff. I accessed the IDEO Human Centered Design Toolkit to help guide me throught the design challenge process.
@@ -71,7 +69,7 @@
 		<footer id="footer">
 
 			<div class="copyright">
-				&copy;2018 Ashley Stone.
+				&copy;2018 Emma Marks
 			</div>
 		</footer>
 
