--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo"><strong>Process Book</strong> | Template Files</a>
+				<a href="index.html" class="logo"><strong>Emma Marks</strong> | Process Site</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -47,11 +47,11 @@
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Design Challenge</a></h2>
+							<h2><a href="design-challenge.html">Design Challenge</a></h2>
 					</header>
 						<p>Laying out the design challenge was the first step to truly getting to know my client Bob Goff. I accessed the IDEO Human Centered Design Toolkit to help guide me throught the design challenge process.</p>
 					<ul class="actions">
-							<li><a href="generic-page.html" class="button alt">Read More</a></li>
+							<li><a href="design-challenge.html" class="button alt">Read More</a></li>
 						</ul>
 				</div>
 				<div class="postnav">
@@ -68,11 +68,11 @@
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Research</a></h2>
+							<h2><a href="research.html">Research</a></h2>
 						</header>
 						<p>I started conducting primary research on my client Bob Goff, and then secondry research other organization similar to Bob Goff's plan.</p>
 						<ul class="actions">
-							<li><a href="generic-page.html" class="button alt">Read More</a></li>
+							<li><a href="research.html" class="button alt">Read More</a></li>
 						</ul>
 					</div>
 					<div class="postnav">
@@ -90,11 +90,11 @@
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Audience &amp; Goals</a></h2>
+							<h2><a href="audience-and-goals.html">Audience &amp; Goals</a></h2>
 						</header>
 						<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
 						<ul class="actions">
-							<li><a href="generic-page.html" class="button alt">Read More</a></li>
+							<li><a href="audience-and-goals.html" class="button alt">Read More</a></li>
 						</ul>
 					</div>
 					<div class="postnav">
@@ -112,11 +112,11 @@
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Solution</a></h2>
+							<h2><a href="solution.html">Solution</a></h2>
 						</header>
 						<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
 						<ul class="actions">
-							<li><a href="generic-page.html" class="button alt">Read More</a></li>
+							<li><a href="solution.html" class="button alt">Read More</a></li>
 						</ul>
 					</div>
 					<div class="postnav">
