--- a/design-challeneg.html
+++ b/design-challeneg.html
@@ -31,7 +31,9 @@
 		<!-- Main -->
 			<section id="main">
 				<div class="inner">
-				</div>
+					<!-- <div class="image fit">
+							<img src="images/GCHC-1.jpg" alt="" />
+						</div> -->
 					<header>
 						<h1>Design Challenge</h1>
 						<p>Laying out the design challenge was the first step to truly getting to know my client Bob Goff. I accessed the IDEO Human Centered Design Toolkit to help guide me throught the design challenge process.
