--- a/design-challeneg.html
+++ b/design-challeneg.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo"><strong>Ashley Stone</strong> | Process Site</a>
+				<a href="index.html" class="logo"><strong>Emma Marks</strong> | Process Site</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
