--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<header>
 							<h2><a href="research.html">Research</a></h2>
 						</header>
-						<p>I started conducting primary research on my client Bob Goff, and then secondry research other organization similar to Bob Goff's plan.</p>
+						<p>I started conducting primary research on my client Bob Goff, and then secondry research on other organizations similar to Bob Goff's plan.</p>
 						<ul class="actions">
 							<li><a href="research.html" class="button alt">Read More</a></li>
 						</ul>
