--- a/research.html
+++ b/research.html
@@ -36,30 +36,33 @@
 					</div> -->
 					<header>
 						<h1>Research</h1>
-						<p>I started conducting primary research on my client Bob Goff, and then secondry research other organization similar to Bob Goff's plan.</p>
+						<p>I started conducting primary research on my client Bob Goff, and then secondry research on other organizations similar to Bob Goff's plan.</p>
 					</header>
 					<h2>Primary Client Research</h2>
-					<p><span class="image left"><img src="images/ACW-16.jpg" alt="Old ACW Website" /></span><h3>Research from the ACW website</h3>A Candle in the Window is a Christian Hospitality network started by Theresa Bowen that aims to connect Christian travelers to homes to support cheap family travel but most of all, promote Christian Hospitality and fellowship. To join the network, a user must pay $30 each year and can then stay at hosts homes for free and host people as they connect. Missionary’s and Pastor’s membership is free. This feature aims to help missionaries take a break and stay on budget to avoid burnout. There is lots of information on the website from extensive member stories to a map of the global locations to upcoming events that promote hospitality.</p>
-					<h5>About Us</h5>
-					<p>This section includes 6 pages ranging from the background story of A Candle in the Window, an introduction of the Bowen Family, a purpose statement, how it works, how to help ACW grow, and Contact.
-						The most important part of this section in designing the website was their Purpose Statement which said:
-						"Through A Candle in the Window Hospitality Network, we hope to Glorify God by:</p>
-						<ul>
-							<li>1) multiplying the blessings that we have experienced in our own home through hospitality</li>
-						  <li>2) providing an economical alternative for travel</li>
-							<li>3) encouraging hospitality through our website and inspirational/educational resources</li>
-							<li>4) strengthening our family identity and economy, and</li>
-							<li>5) sharing our profits with worthy ministries that seek honor Christ and to build up the church and family"</li>
-						</ul>
-					<h5>Member Stories</h5>
-					<p>There are many member stories from all over the globe. From Ohio to Guatemala to South Korea. This emphasizes ACW’s global audience. The stories also told me about the users and their demographics. Many stories were from married couples and families. There were also some stories and reviews from single adult travelers. 100% of the reviews were positive and the people all spoke very highly of their hosts and their experience with ACW.
-					</p>
-					<p><span class="image left"><img src="images/ACW-18.jpg" alt="ACW Members Map" /></span>
-					<h5>Location</h5>
-					<p>There is a map with pins for all the members of ACW Network as well as a public directory that users can search for specific locations even before they join. There is also a private directory for members to search desired locations.
-					</p>
+					<p><span class="image left"><</span><h3>Research from Bob Goff's Website</h3>Bob Goff's goal and mission is to show people how to love and how to be loved greater. He has written multiple books, created a workshop, and founded a non-profit orignation.</p>
+					<h5>Home</h5>
+					<p>This section includes 7 pages ranging from dream big workshop, speaking (how to get Bob Goff to speak at your conference), the team that helps run all the details for Bob Goff's mission, his podcasts, the shop, love does which is his non-profit organization, and follow, which are all of the social media plantforms you can find Bob Goff.</p>
+			    <h5>One Mission Statement</h5>
+          <p>"Live in Grace, Walk in Love." Bob listed three ways to get connected:</p>
+            <ul>
+              <li>Meet Bob!</li>
+              <li>Change Up Your Life</li>
+              <li>Be Available.</li>
+            </ul>
+          <h5>Two Mission Statement</h5>
+          <p>"Chose Your Adventure." Bob's listed two ways to chose your adventure:</p>
+          <ul>
+            <li>Get Started on Your Big Dream.</li>
+            <li>Spread a Little Whimsy.</li>
+          </ul>
+          <h5>Love Does.</h5>
+          <p>About his Book. Bob listed two things about his book.</p>
+          <ul>
+            <li>Find Out More.</li>
+            <li>Get the Book.</li>
+          </ul>
 					<h5>Summary</h5>
-					<p>From this primary client research, I learned the goal and mission behind my client Bob Goff, which is extremely important aspect of Human Centered Design. I also learned about their target audience and main users of Bob Goff's website. This will end up influence my call to action. 
+					<p>From this primary client research, I learned the goal and mission behind my client Bob Goff, which is extremely important aspect of Human Centered Design. I also learned about their target audience and main users of Bob Goff's website. This will end up influence my call to action.
 					</p>
 					<br><hr>
 				</div>
