--- a/research.html
+++ b/research.html
@@ -39,7 +39,7 @@
 						<p>I started conducting primary research on my client Bob Goff, and then secondry research on other organizations similar to Bob Goff's plan.</p>
 					</header>
 					<h2>Primary Client Research</h2>
-					<p><span class="image left"><</span><h3>Research from Bob Goff's Website</h3>Bob Goff's goal and mission is to show people how to love and how to be loved greater. He has written multiple books, created a workshop, and founded a non-profit orignation.</p>
+					<p><h3>Research from Bob Goff's Website</h3>Bob Goff's goal and mission is to show people how to love and how to be loved greater. He has written multiple books, created a workshop, and founded a non-profit orignation.</p>
 					<h5>Home</h5>
 					<p>This section includes 7 pages ranging from dream big workshop, speaking (how to get Bob Goff to speak at your conference), the team that helps run all the details for Bob Goff's mission, his podcasts, the shop, love does which is his non-profit organization, and follow, which are all of the social media plantforms you can find Bob Goff.</p>
 			    <h5>One Mission Statement</h5>
@@ -69,44 +69,35 @@
 
 				<div class="inner">
 					<h2>Secondary Research</h2>
-					<img class="image right" src="images/ACW-8.jpg" alt="FaithStay landing page" />
-					<h3>FaithStay</h3>
-					<p>For my secondary research, I wanted to look at other hospitality sites and note their successess and features.</p>
-					<p><span class="image right"><img src="images/ACW-9.jpg" alt="FaithStay Instagram" /></span> Faith Stay is an organization who acts like a Christian Airbnb. Users can charge however much they want, but most charge around a regular Airbnb price. FaithStay’s aim is to rent safe and loving accommodations in Christian homes. They operate almost identically to Airbnb with the search bar on the main page and the button placements. They also have photos of the homes and requirements to stay in each home. Their main pages are host, travel, give back, and trust which address most user needs beyond searching homes and logging in.The trendy photography is aimed at millennials and they have an attractive Instagram account with nearly 1500 followers.</p>
-					<br></br>
+
+					<h3>Love without Boundaries.</h3>
+					<p>For my secondary research, I wanted to look at other non-profit organizations that goals are to help orphans.</p>
+					<p>Love without Boundaries is an organization, who displays children in need of a sponsor. They also have a way to donate money towards their non-profit. Users can donate however much they want. They statement on their homepage, "Love Without Boundaries is an authentic international charity that provides hope and healing to orphaned and vulnerable children, and their underserved communities, through its education, nutrition, medical, and foster care programs."</p>
+				<br></br>
 				<hr>
-				<h3>The Christian Hospitality Network</h3>
-				<img class="image right" src="images/ACW-11.jpg" alt="CHN landing page" />
-				<p>The CHN is another site aimed more at Missionary and Pastor care. </p>
-				<p>This site shows a collection of missionary getaways and accommodations for missionaries to rest as well as conferences for them to be poured into and refreshed. The website aesthetic is simple and inviting and targeted at older missionaries and Pastors. The places listed on the CHN still cost money and are listed like Airbnb but all accommodations are owned by Christians.</p>
+				  <h3>Worldwide Orphans</h3>
+				  <p>Worldwide Orphans is another organization that helps orphans around the world.</p>
+				  <p>Their mission statments is "Worldwide Orphans transforms the lives of orphans and at-risk children by providing access to education, medical care, and psycho-social support so they become independent, productive members of their communities and the world."</p>
 				<br></br>
 			<hr>
-			<img class="image right" src="images/ACW-13.jpg" alt="Legal Questions" />
-			<h3>Legal: The Sharing Economy</h3>
-			<p>I looked into legal issues in Sharing Economy since it is a newly and vastly growing business model in the world.</p>
-			<p>New laws are just now catching up now that the results of Sharing Economy are beginning to make lasting effects. This article discusses Uber as a Sharing Economy and the problem of them treating their drivers as independent contractors instead of employees saving them a lot of money.</p>
-			<p><span class="image left"><img src="images/ACW-15.jpg" alt="Legal Article Highlighted" /></span>Questions of liability come into question in a Sharing Economy model which is important for ACW to look into as this movement grows. Also problems of refusal to host minorities, handicapped accessibility and room-sharing companies raise legal questions.
-				Airbnb was penalized for booking an unregistered home and collecting a fee under Section 230 of the Communications Decency Act of 1996.
-			</p>
-			<h3>Summary</h3>
-			<p>My Secondary Research gave me inspiration of what works from two successful Christian Hospitality Networks that are similar to ACW. Their audiences include both of ACW’s and their CTAs are notable for their services. I also learned that there are legal limitations and global discussions around the sharing economy that may affect ACW, some of which need to be outlined on the website.
-			</p>
-		<hr>
+
+			   <h3>CAFO</h3>
+         <p>CAFO standards for Christian Alliance for Orphans. Their huge drawl for their non-profit is "Your Non-Profit, Part of Bigger Story." They want to show people they have an impact on the world.</p>
+      <br></br>
+      <hr>
+			   <h3>Summary</h3>
+			      <p>My Secondary Research showed me what Bob Goff's website needs to display to truly draw users into helping with his non-profit organization.
+			     </p>
+		 <hr>
 				</div>
 
 				<div class="inner">
 					<h2>Interviews</h2>
-							<p>I was able to meet with the Founder of A Candle in the window as well as a possible user to gain important primary information about ACW.</p>
+
 					<h3>Client Interview</h3>
-					<p>Theresa Bowen is a mom of 5 kids and a wife of a pastor. She and her family are passionate about Christian hospitality and making their home a home to many. As a homeschool mom, Theresa is passionate about giving her kids a full education—including loving and serving God with all their heart. She started A Candle in the Window after she opened their apartment to a traveler and decided to create a network of refuges around the world.
-						<br></br>
-						Summary: I learned the background story of ACW from Theresa as well as the goal of the website. According to Theresa, the main goal is to attract new members and be a community-based network for users to connect with a host quickly and simply. The main problems were that the site was outdated and there was not a mobile version as many users desired.
-					</p>
+
 					<h3>User Interview</h3>
-					<p>Erin Drago is a mom of 3 kids and a wife to the worship elder at Renewal Church. Her family enjoys traveling and she is a firm believer in opening home to people. Their family hosts life group each week and college students when they need to stay the night. Recently, they have renovated a rental home for college students close to Anderson’s campus.
-						<br></br>
-						Summary: From interviewing Erin, I learned what needs to be included on the website for people to feel comfortable joining. High quality photos are appreciated as well as knowing someone and hearing trustworthy user stories. Details are also very important to show in a, easily accessible place.
-					</p>
+
 					</div>
 			</section>
 
