--- a/research.html
+++ b/research.html
@@ -40,48 +40,69 @@
 					</header>
 					<h2>Primary Client Research</h2>
 					<p><h3>Research from Bob Goff's Website</h3>Bob Goff's goal and mission is to show people how to love and how to be loved greater. He has written multiple books, created a workshop, and founded a non-profit orignation.</p>
-					<h5>Home</h5>
-					<p>This section includes 7 pages ranging from dream big workshop, speaking (how to get Bob Goff to speak at your conference), the team that helps run all the details for Bob Goff's mission, his podcasts, the shop, love does which is his non-profit organization, and follow, which are all of the social media plantforms you can find Bob Goff.</p>
-			    <h5>One Mission Statement</h5>
-          <p>"Live in Grace, Walk in Love." Bob listed three ways to get connected:</p>
+
+          <div class="inner">
+            <h5>Home</h5>
+					    <p>This section includes 7 pages ranging from dream big workshop, speaking (how to get Bob Goff to speak at your conference), the team that helps run all the details for Bob Goff's mission, his podcasts, the shop, love does which is his non-profit organization, and follow, which are all of the social media plantforms you can find Bob Goff.</p>
+            <br></br>
+            <hr>
+
+          <div class="inner">
+            <h5>1st Mission Statement</h5>
+              <p><span class="image right"><img src="images/homepagep3.jpg"></P>
+              <p>"Live in Grace, Walk in Love." Bob listed three ways to get connected:</p>
             <ul>
               <li>Meet Bob!</li>
               <li>Change Up Your Life</li>
               <li>Be Available.</li>
             </ul>
-          <h5>Two Mission Statement</h5>
-          <p>"Chose Your Adventure." Bob's listed two ways to chose your adventure:</p>
+          <br></br>
+          <hr>
+
+          <div class="inner">
+            <h5>2nd Mission Statement</h5>
+              <p><span class="image right"><img src="image/homepage1.jpg"/></span></p>
+              <p>"Chose Your Adventure." Bob's listed two ways to chose your adventure:</p>
           <ul>
             <li>Get Started on Your Big Dream.</li>
             <li>Spread a Little Whimsy.</li>
           </ul>
+          <br></br>
+          <hr>
+
+        <div class="inner">
           <h5>Love Does.</h5>
-          <p>About his Book. Bob listed two things about his book.</p>
+            <p><span class="image right"><img src="image/homepagep2.jpg"/></span></p>
+            <p>About his Book. Bob listed two things about his book.</p>
           <ul>
             <li>Find Out More.</li>
             <li>Get the Book.</li>
           </ul>
+          <br></br>
+          <hr>
+
+        <div class="inner">
 					<h5>Summary</h5>
 					<p>From this primary client research, I learned the goal and mission behind my client Bob Goff, which is extremely important aspect of Human Centered Design. I also learned about their target audience and main users of Bob Goff's website. This will end up influence my call to action.
 					</p>
 					<br><hr>
+          <hr>
 				</div>
 
 				<div class="inner">
 					<h2>Secondary Research</h2>
-
-					<h3>Love without Boundaries.</h3>
+				  <p><span class="image left"><img src="images/LWB.jpg" /></span><h3>Love without Boundaries.</h3>
 					<p>For my secondary research, I wanted to look at other non-profit organizations that goals are to help orphans.</p>
 					<p>Love without Boundaries is an organization, who displays children in need of a sponsor. They also have a way to donate money towards their non-profit. Users can donate however much they want. They statement on their homepage, "Love Without Boundaries is an authentic international charity that provides hope and healing to orphaned and vulnerable children, and their underserved communities, through its education, nutrition, medical, and foster care programs."</p>
 				<br></br>
 				<hr>
-				  <h3>Worldwide Orphans</h3>
+				  <p><span class="image left"><img src="images/wwo.jpg" /></span><h3>Worldwide Orphans</h3>
 				  <p>Worldwide Orphans is another organization that helps orphans around the world.</p>
 				  <p>Their mission statments is "Worldwide Orphans transforms the lives of orphans and at-risk children by providing access to education, medical care, and psycho-social support so they become independent, productive members of their communities and the world."</p>
 				<br></br>
 			<hr>
 
-			   <h3>CAFO</h3>
+			  <p><span class="image left"><img src="images/CAFO.jpg" /></span> <h3>CAFO</h3>
          <p>CAFO standards for Christian Alliance for Orphans. Their huge drawl for their non-profit is "Your Non-Profit, Part of Bigger Story." They want to show people they have an impact on the world.</p>
       <br></br>
       <hr>
