--- a/research.html
+++ b/research.html
@@ -36,7 +36,7 @@
 					</div> -->
 					<header>
 						<h1>Research</h1>
-						<p>I started conducting primary research on my client Bob Goff, and then secondry research on other organizations similar to Bob Goff's plan.</p>
+						<p> I started conducting primary research on my client Bob Goff, and then secondry research on other organizations similar to Bob Goff's plan.</p>
 					</header>
 					<h2>Primary Client Research</h2>
 					<p><h3>Research from Bob Goff's Website</h3>Bob Goff's goal and mission is to show people how to love and how to be loved greater. He has written multiple books, created a workshop, and founded a non-profit orignation.</p>
@@ -49,7 +49,7 @@
 
           <div class="inner">
             <h5>1st Mission Statement</h5>
-              <p><span class="image right"><img src="images/homepagep3.jpg"></P>
+              <p><span class="image right"><img src="images/homepage1.jpg"></P>
               <p>"Live in Grace, Walk in Love." Bob listed three ways to get connected:</p>
             <ul>
               <li>Meet Bob!</li>
@@ -61,7 +61,7 @@
 
           <div class="inner">
             <h5>2nd Mission Statement</h5>
-              <p><span class="image right"><img src="image/homepage1.jpg"/></span></p>
+              <p><span class="image right"><img src="image/homepage2.jpg"/></span></p>
               <p>"Chose Your Adventure." Bob's listed two ways to chose your adventure:</p>
           <ul>
             <li>Get Started on Your Big Dream.</li>
@@ -72,7 +72,7 @@
 
         <div class="inner">
           <h5>Love Does.</h5>
-            <p><span class="image right"><img src="image/homepagep2.jpg"/></span></p>
+            <p><span class="image right"><img src="image/homepage3.jpg"/></span></p>
             <p>About his Book. Bob listed two things about his book.</p>
           <ul>
             <li>Find Out More.</li>
