--- a/research.html
+++ b/research.html
@@ -43,6 +43,7 @@
 
           <div class="inner">
             <h5>Home</h5>
+							<p><span class="image left"><img src="images/homebar.jpg"></P>
 					    <p>This section includes 7 pages ranging from dream big workshop, speaking (how to get Bob Goff to speak at your conference), the team that helps run all the details for Bob Goff's mission, his podcasts, the shop, love does which is his non-profit organization, and follow, which are all of the social media plantforms you can find Bob Goff.</p>
             <br></br>
             <hr>
