--- a/research.html
+++ b/research.html
@@ -62,7 +62,7 @@
 
           <div class="inner">
             <h5>2nd Mission Statement</h5>
-              <p><span class="image right"><img src="image/homepage2.jpg"/></span></p>
+              <p><span class="image right"><img src="image/homepage2.jpg"></p>
               <p>"Chose Your Adventure." Bob's listed two ways to chose your adventure:</p>
           <ul>
             <li>Get Started on Your Big Dream.</li>
@@ -73,7 +73,7 @@
 
         <div class="inner">
           <h5>Love Does.</h5>
-            <p><span class="image right"><img src="image/homepage3.jpg"/></span></p>
+            <p><span class="image right"><img src="image/homepage3.jpg"></p>
             <p>About his Book. Bob listed two things about his book.</p>
           <ul>
             <li>Find Out More.</li>
