--- a/research.html
+++ b/research.html
@@ -36,7 +36,7 @@
 					</div> -->
 					<header>
 						<h1>Research</h1>
-						<p> I started conducting primary research on my client Bob Goff, and then secondry research on other organizations similar to Bob Goff's plan.</p>
+						<p><center>I started conducting primary research on my client Bob Goff, and then secondry research on other organizations similar to Bob Goff's plan.<center></p>
 					</header>
 					<h2>Primary Client Research</h2>
 					<p><h3>Research from Bob Goff's Website</h3>Bob Goff's goal and mission is to show people how to love and how to be loved greater. He has written multiple books, created a workshop, and founded a non-profit orignation.</p>
