--- a/research.html
+++ b/research.html
@@ -111,6 +111,11 @@
 			      <p>My Secondary Research showed me what Bob Goff's website needs to display to truly draw users into helping with his non-profit organization.
 			     </p>
 		 <hr>
+
+		 		 <h3>Current News</h3>
+					<p>When conducting my secondary research, I searched for news artcles talking about the needs of orphans and different companies trying to formulate a non-profit. It is honeslty sad how many different non-profit organzations are out there trying to help orphans.</p>
+	 	<br></br>
+	 	<hr>
 				</div>
 
 				<div class="inner">
