--- a/research.html
+++ b/research.html
@@ -112,7 +112,7 @@
 			     </p>
 		 <hr>
 
-		 		 <h3>Current News</h3>
+		 		<p><span class="image right"><img src="image/news1.jpg"><span class="image left"><image src="image/news2.jpg"><span class="image right"><image src="image/news3.jpg"></p><h3>Current News</h3>
 					<p>When conducting my secondary research, I searched for news artcles talking about the needs of orphans and different companies trying to formulate a non-profit. It is honeslty sad how many different non-profit organzations are out there trying to help orphans.</p>
 	 	<br></br>
 	 	<hr>
