--- a/design-challenge.html
+++ b/design-challenge.html
@@ -60,7 +60,7 @@
 						<h3>Context and Constraints</h3>
 						<p>Range of different countries and people in need from needing food or help making their dream come true. Wide range of people needing help and/or guidance which is hard to follow and keep up with all the different aspects.</p>
 						<h3>The Design Question Restated</h3>
-						<p><strong>"How can the re-design of this website attract users to Bob Goff's organization and books?"</strong></p>
+						<p><strong>"How can the re-design of this website attract users to Bob Goff's organization, books, and workshops?"</strong></p>
 						<hr>
 
 
