--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<!-- One -->
 			<article id="one" class="post style1">
 				<div class="image">
-					<img src="images/pic14.jpg" alt="" data-position="75% center" />
+					<img src="images/bob-reckless love.jpg" alt="" data-position="75% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -85,7 +85,7 @@
 		<!-- Three -->
 			<article id="three" class="post style2">
 				<div class="image">
-					<img src="images/pic12.jpg" alt="" data-position="50% center" />
+					<img src="images/bob goff-balloons copy.jpg" alt="" data-position="50% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
