change in image

--- a/research.html
+++ b/research.html
@@ -92,18 +92,18 @@
 
 				<div class="inner">
 					<h2>Secondary Research</h2>
-				  <p><span class="image left"><img src="images/LWB.jpg" /></span><h3>Love without Boundaries.</h3>
+				  <p><span class="image left"><img src="images/LWB.jpg"><h3>Love without Boundaries.</h3>
 					<p>For my secondary research, I wanted to look at other non-profit organizations that goals are to help orphans.</p>
 					<p>Love without Boundaries is an organization, who displays children in need of a sponsor. They also have a way to donate money towards their non-profit. Users can donate however much they want. They statement on their homepage, "Love Without Boundaries is an authentic international charity that provides hope and healing to orphaned and vulnerable children, and their underserved communities, through its education, nutrition, medical, and foster care programs."</p>
 				<br></br>
 				<hr>
-				  <p><span class="image left"><img src="images/wwo.jpg" /></span><h3>Worldwide Orphans</h3>
+				  <p><span class="image left"><img src="images/wwo.jpg"><h3>Worldwide Orphans</h3>
 				  <p>Worldwide Orphans is another organization that helps orphans around the world.</p>
 				  <p>Their mission statments is "Worldwide Orphans transforms the lives of orphans and at-risk children by providing access to education, medical care, and psycho-social support so they become independent, productive members of their communities and the world."</p>
 				<br></br>
 			<hr>
 
-			  <p><span class="image left"><img src="images/CAFO.jpg" /></span> <h3>CAFO</h3>
+			  <p><span class="image left"><img src="images/CAFO.jpg"><h3>CAFO</h3>
          <p>CAFO standards for Christian Alliance for Orphans. Their huge drawl for their non-profit is "Your Non-Profit, Part of Bigger Story." They want to show people they have an impact on the world.</p>
       <br></br>
 
