--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<!-- Three -->
 			<article id="three" class="post style2">
 				<div class="image">
-					<img src="images/bob goff-balloons copy.jpg" alt="" data-position="30% center" />
+					<img src="images/bobgoff-balloons.jpg" alt="" data-position="30% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
