--- a/research.html
+++ b/research.html
@@ -62,7 +62,7 @@
 
           <div class="inner">
             <h5>2nd Mission Statement</h5>
-              <p><span class="image right"><img src="image/homepage2.jpg"></p>
+              <p><span class="image right"><img src="images/homepage2.jpg"></p>
               <p>"Chose Your Adventure." Bob's listed two ways to chose your adventure:</p>
           <ul>
             <li>Get Started on Your Big Dream.</li>
@@ -73,7 +73,7 @@
 
         <div class="inner">
           <h5>Love Does.</h5>
-            <p><span class="image right"><img src="image/homepage3.jpg"></p>
+            <p><span class="image right"><img src="images/homepage3.jpg"></p>
             <p>About his Book. Bob listed two things about his book.</p>
           <ul>
             <li>Find Out More.</li>
@@ -107,11 +107,6 @@
          <p>CAFO standards for Christian Alliance for Orphans. Their huge drawl for their non-profit is "Your Non-Profit, Part of Bigger Story." They want to show people they have an impact on the world.</p>
       <br></br>
 
-
-		 		<p><span class="image right"><img src="image/news1.jpg"><span class="image left"><image src="image/news2.jpg"><span class="image right"><image src="image/news3.jpg"></p><h3>Current News</h3>
-					<p>When conducting my secondary research, I searched for news artcles talking about the needs of orphans and different companies trying to formulate a non-profit. It is honeslty sad how many different non-profit organzations are out there trying to help orphans.</p>
-	 	<br></br>
-	 	<hr>
 				</div>
 
 				<hr>
@@ -119,6 +114,13 @@
 							<p>My Secondary Research showed me what Bob Goff's website needs to display to truly draw users into helping with his non-profit organization.
 						 </p>
 			 <hr>
+
+			 <p><span class="image right"><img src="images/news1.jpg">
+				 	<span class="image left"><image src="images/news2.jpg">
+					<span class="image right"><image src="images/news3.jpg"></p><h3>Current News</h3>
+ 					<p>When conducting my secondary research, I searched for news artcles talking about the needs of orphans and different companies trying to formulate a non-profit. It is honeslty sad how many different non-profit organzations are out there trying to help orphans.</p>
+ 	 	<br></br>
+ 	 	<hr>
 
 				<div class="inner">
 					<h2>Interviews</h2>
