--- a/research.html
+++ b/research.html
@@ -127,25 +127,47 @@
 
 					<h3>Client Interview</h3>
 
+						I emailed Bob Goff and everyone on staff. They told me they do not have time right now to let me ask them some questions.
+
+
 					<h3>User Interview</h3>
 
-					</div>
-			</section>
+					<p> Client Number 1:</p>
+					<p> <li> Rob Marks
+						<li> Age: 52
+				  	<li> Job: Executive Pastor at Fellowship Greenville
+					</p>
 
-		<!-- Footer -->
-		<footer id="footer">
+					<p> I started off asking Mr. Marks why he was drawn to Bob Goff’s books and mission statement. He told me he thinks that the way Bob Goff’s writes about his life and journey about being a Christian draws people in and shows people what it looks like to have a gospel centered life. The next question I asked him was if he thinks people know that Mr. Goff has an non-profit organization connected to his book “Love Does.” He told me when he tells people to read the book some people know everything that Mr. Goff does and others have no idea who his and what he stands for. I think asked if he has been on the website for Bob Goff. He said he has been on there multiple times and then I asked what was he looking for. Mr Marks told me he was looking for the shop to buy more copies of both of his books. I asked him how long he thought it took him to find both books and he said it probably took him around five minutes total to find and purchase the books. Once I found out what Mr. Marks looks for on Mr. Goff’s website, I then asked him if he has seen anything on the front page of the website about the non-profit and he said, “no, I have to really search for the mission statement and different aspects of the non-profit.” Finally, the last question I asked was what does he want to see when he comes to Bob Goff’s website. Mr. Marks said it would be easier if it was clearly explained on the homepage where everything is located.
+					</P>
 
-			<div class="copyright">
-				&copy;2019 Emma Marks.
-			</div>
-		</footer>
+					<p>Summary: After talking with Pastor Marks, I realized that many people just want to purchase a book and not look for the non-profit because there is no information of the non-profit on the home page. My goal is to help fix this problem and make the overall design more organized for the viewers. Bob Goff values his non-rpfot and it needs to be a higher priority on the home page.</P>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+					<p> Client Number 2:</p>
+					<p><li> Amanda Stone
+							<li> Age: 20
+							<li> Job: Junior in College studying Kinesology at Anderson Univerity
+					</p>
 
-	</body>
-</html>
+					<p>
+					</p>
+
+					<p>Summary:
+					</p>
+
+					<footer id="footer">
+
+						<div class="copyright">
+							&copy;2019 Emma Marks
+						</div>
+					</footer>
+
+					<!-- Scripts -->
+						<script src="assets/js/jquery.min.js"></script>
+						<script src="assets/js/jquery.scrolly.min.js"></script>
+						<script src="assets/js/skel.min.js"></script>
+						<script src="assets/js/util.js"></script>
+						<script src="assets/js/main.js"></script>
+
+				</body>
+			</html>
