--- a/research.html
+++ b/research.html
@@ -134,8 +134,8 @@
 
 					<p> Client Number 1:</p>
 					<p> <li> Rob Marks
-						<li> Age: 52
-				  	<li> Job: Executive Pastor at Fellowship Greenville
+						  <li> Age: 52
+				  	  <li> Job: Executive Pastor at Fellowship Greenville
 					</p>
 
 					<p> I started off asking Mr. Marks why he was drawn to Bob Goff’s books and mission statement. He told me he thinks that the way Bob Goff’s writes about his life and journey about being a Christian draws people in and shows people what it looks like to have a gospel centered life. The next question I asked him was if he thinks people know that Mr. Goff has an non-profit organization connected to his book “Love Does.” He told me when he tells people to read the book some people know everything that Mr. Goff does and others have no idea who his and what he stands for. I think asked if he has been on the website for Bob Goff. He said he has been on there multiple times and then I asked what was he looking for. Mr Marks told me he was looking for the shop to buy more copies of both of his books. I asked him how long he thought it took him to find both books and he said it probably took him around five minutes total to find and purchase the books. Once I found out what Mr. Marks looks for on Mr. Goff’s website, I then asked him if he has seen anything on the front page of the website about the non-profit and he said, “no, I have to really search for the mission statement and different aspects of the non-profit.” Finally, the last question I asked was what does he want to see when he comes to Bob Goff’s website. Mr. Marks said it would be easier if it was clearly explained on the homepage where everything is located.
@@ -144,16 +144,16 @@
 					<p>Summary: After talking with Pastor Marks, I realized that many people just want to purchase a book and not look for the non-profit because there is no information of the non-profit on the home page. My goal is to help fix this problem and make the overall design more organized for the viewers. Bob Goff values his non-rpfot and it needs to be a higher priority on the home page.</P>
 
 					<p> Client Number 2:</p>
-					<p><li> Amanda Stone
+					<p> <li> Amanda Stone
 							<li> Age: 20
 							<li> Job: Junior in College studying Kinesology at Anderson Univerity
 					</p>
 
 					<p>
+					I asked Amanda why she enjoys Bob Goff and she said she enjoys reading his books. She likes how he connects his real life stories to the gospel. I asked her if she knew he had a non-profit and she said she knew he had one before reading his book, but does not know a ton of information about it and has not found a ton of information about it. I asked her if she used his website and she said she tried to and got frusterated becuase she could not find what she was looking for. I asked her what was she looking for when she was on the website. She was researching places he was speaking at and the dates for his next conference he was attending. Once I knew what she was looking for, I asked her how long it took her to figure out where he was speaking. She repsonded with. "I never found out where he was speaking." Finally, I asked her what she would like to see on his website. She replied saying, "I think it would be interesting to see stories of different families and children he has helped through his non-profit organization to draw in more people to donate and help. It will allow Bob Goff to be even more personal with his users."
 					</p>
 
-					<p>Summary:
-					</p>
+					<p>Summary: After talking to Amanda Stone, I realized Bob Goff has completely no organization within his site and users get completely lost when trying to find simple inforamation,like dates and places where he is speaking at next. </p>
 
 					<footer id="footer">
 
