--- a/solution.html
+++ b/solution.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo"><strong>Emma Marks/strong> | Process Site</a>
+				<a href="index.html" class="logo"><strong>Emma Marks</strong> | Process Site</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -33,20 +33,20 @@
 				<div class="inner">
 					<header>
 						<h1>Solution</h1>
-						<p>After the research I formed a Call to Action to accomplish the goal of the website as well as a style tile to help convey the general feel.</p>
+						<p>After completing primary and secondary research, as well as conducting interviews, I was able to create two main call to actions.</p>
 					</header>
 					<h2>Call to action</h2>
 					<div class="row 50% uniform">
 						<div class="12u$"><span class="image left"><img src="images/ACW_Call_To_Action.jpg" alt="" /></span></div>
-						<div class="12u$"><p>“Join Now” is the call to action speaking to the website’s non-member visitors. Since there are 2 main audiences, one of the two main goals is to attract new members to the network. An attention demanding button saying “join now” makes the navigation easy to accomplish the goal.
+						<div class="12u$"><p>“Donate” is the call to action directed toward people who know information about the non-profit and Bob Goff himself and want to support the non-profit. Since there are 2 main audiences, people who do not know the brand and other who know the brand. One of the two main goals is to attract new members to the brand so they can learn new information and get to the point of where they can donate towards the non-profit. An attention demanding button saying “Donate” makes the navigation easy to accomplish the goal.
 						</p></div>
-						<p>The “Login” Call to action would be in the upper right because members would already know where it is because they have to do that every time they use the site. The “Login” call to action is for the members who want to connect with a host to find a place to stay or vice versa. This would allow easy access to streamline their booking process.
+						<p>The “Learn More" call to action would be right next to the donate button so they could see the ultimate goal for the brand. The “Learn More” call to action is for the members who want to connect with Bob Goff and understand who is his along with his mission. This call to action "Learn More" would allow easy access to getting to know the brand.
 						</p>
 					</div>
 					<hr>
 					<h2>Style Tile</h2>
 					<div class="row 50% uniform">
-						<div class="12u1"><p>I created a style tile to help convey the general feel of the website I will design.</p></div>
+						<div class="12u1"><p>I created a style tile to help viewers understand the design vision for the website.</p></div>
 						<div class="12u$"><span class="image fit"><img src="images/ACW_Style_Tile.jpg" alt="" style="border: 1px solid #cccccc;" /></span></div>
 						<div class="12u$"><p>The adjectives I aimed at visually describing were warm, inviting, trustworthy, communal, friendly, casual, and authentic. These adjectives would help a user feel welcome and would encourage them to trust ACW and join the network.
 						</p><p>
@@ -68,7 +68,7 @@
 		<footer id="footer">
 
 			<div class="copyright">
-				&copy;2018 Ashley Stone.
+				&copy;2019 Emma Marks.
 			</div>
 		</footer>
 
